# framework

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml
buildscripts/cmake/: SetupGTest.cmake
src/: CMakeLists.txt
src/stubs/: CMakeLists.txt
src/uicomponents/: CMakeLists.txt
